gap fixing

--- a/src/components/BlogList/blogList.scss
+++ b/src/components/BlogList/blogList.scss
@@ -3,7 +3,7 @@
 .blog-list {
   display: grid;
   gap: 1.25rem;
-  margin: 1.75rem auto;
+  margin: 1rem auto;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
 
   &__button {
